--- a/views/layout.tt
+++ b/views/layout.tt
@@ -369,7 +369,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                        <h4 class="modal-title" id="myModalLabel">Calculated values</h4>
+                        <h4 class="modal-title" id="myModalLabel">Calculated and RAG values</h4>
                     </div>
                     <div class="modal-body">
                         <p>[% global.helptext.layout_calc %]</p>
