--- a/views/view.tt
+++ b/views/view.tt
@@ -133,94 +133,17 @@
                 ' );
             });
         }); 
-        $('#builder').queryBuilder({
-            filters: [
-                [% FOR column IN all_columns %]
-                    {
-                        id: '[% column.id %]',
-                        label: '[% column.name | html_entity %]',
-                        [% IF column.type == "intgr" %]
-                            type: 'integer',
-                        [% ELSIF column.return_type == "date" %]
-                            type: 'date',
-                            operators: ['equal', 'not_equal', 'less', 'less_or_equal', 'greater',
-                                'greater_or_equal',
-                                'is_empty', 'is_not_empty'
-                            ],
-                        [% ELSIF column.return_type == "daterange" %]
-                            type: 'date',
-                            operators: ['equal', 'not_equal', 'less', 'less_or_equal', 'greater',
-                                'greater_or_equal', 'contains',
-                                'is_empty', 'is_not_empty'
-                            ],
-                        [% ELSE %]
-                            type: 'string',
-                        [% END %]
-                        [% IF column.type == "rag" %]
-                            input: 'select',
-                            values: {
-                                'b_red': 'Red',
-                                'c_amber': 'Amber',
-                                'd_green': 'Green',
-                                'a_grey': 'Grey',
-                                'e_purple': 'Purple'
-                            },
-                        [% END %]
-                        [%
-                            column_type = column.type;
-                            IF column_type == 'enum'
-                                OR column_type == 'person'
-                                OR column_type == 'calc'
-                                OR column_type == 'tree';
-                        %]
-                        onAfterCreateRuleInput: function($rule, filter) {
-                            var $ruleInput = $( '#' + $rule.attr('id') + ' .rule-value-container input');
-                            $ruleInput.attr('autocomplete', 'off');
-                            $ruleInput.typeahead({
-                                delay: 100,
-                                matcher: function () { return true; },
-                                sorter: function (items) { return items; },
-                                source: function (query, process) {
-                                    return $.ajax({
-                                        type: 'GET',
-                                        url: '/match/layout/[% column.id | uri %]',
-                                        data: { q: query },
-                                        success: function(result) { process(result) },
-                                        dataType: 'json'
-                                    });
-                                }
-                            });
-                        }
-                        [% END %]
-                    },
-                [% END %] 
-                ],
-                operators: [
-                    {type: 'equal',            accept_values: true,  apply_to: ['string', 'number', 'datetime']},
-                    {type: 'not_equal',        accept_values: true,  apply_to: ['string', 'number', 'datetime']},
-                    {type: 'less',             accept_values: true,  apply_to: ['string', 'number', 'datetime']},
-                    {type: 'less_or_equal',    accept_values: true,  apply_to: ['string', 'number', 'datetime']},
-                    {type: 'greater',          accept_values: true,  apply_to: ['string', 'number', 'datetime']},
-                    {type: 'greater_or_equal', accept_values: true,  apply_to: ['string', 'number', 'datetime']},
-                    {type: 'contains',         accept_values: true,  apply_to: ['datetime']},
-                    {type: 'begins_with',      accept_values: true,  apply_to: ['string']},
-                    {type: 'is_empty',         accept_values: false, apply_to: ['string', 'number', 'datetime']},
-                    {type: 'is_not_empty',     accept_values: false, apply_to: ['string', 'number', 'datetime']}
-                ]
-
-        });
+        [% INCLUDE builder.tt filter_normal = v.filter filter_base64 = v.filter_base64 %]
+        [% IF v.filter AND NOT v.filter.match('^[{}\s]*$') %]
+            var data = decodeBase64('[% v.filter_base64 %]');
+            $('#builder').queryBuilder('setRules',
+                JSON.parse(data)
+            );
+        [% END %]
         function UpdateFilter() {
             var res = $('#builder').queryBuilder('getRules');
             $("#filter").val(JSON.stringify(res, null, 2));
         };
-        [% IF v.filter AND NOT v.filter.match('^[{}\s]*$') %]
-            $( document ).ready(function() {
-                var data = decodeBase64('[% v.filter_base64 %]');
-                $('#builder').queryBuilder('setRules', 
-                    JSON.parse(data)
-                );
-            });
-        [% END %]
 [% END %]
 [% END %]';
 </script>
