--- a/views/edit.tt
+++ b/views/edit.tt
@@ -327,6 +327,10 @@
             </label>
         [% END %]
     [% IF dispcol.type == "enum" %]
+        [% IF dispcol.multivalue %]
+            [%# Ensure a value gets sent back to show this field was shown if nothing selected %]
+            <input type="hidden" name="[% field %]">
+        [% END %]
         <select class="form-control [% IF dispcol.multivalue %]selectpicker [% END %]" name="[% field %]" id="[% dispcol.id %]" [% readonly %] [% IF dispcol.multivalue %]multiple[% END %]>
             [% IF dispcol.optional OR editvalue.deleted OR (record.current_id AND NOT editvalue.id) OR NOT record.current_id %]
                 [% IF !dispcol.multivalue %]
