--- a/views/edit.tt
+++ b/views/edit.tt
@@ -359,14 +359,20 @@
                 name="[% field %]_typeahead" value="[% IF record %][% editvalue.html %][% END %]" [% readonly %] >
             [% typeaheads.push({id = dispcol.id, field = field }) %]
         [% ELSE %]
-            <select class="form-control" name="[% field %]" id="[% dispcol.id %]" [% readonly %] >
-                [% IF dispcol.optional OR editvalue.deleted OR (record.current_id AND NOT editvalue.id) OR NOT record.current_id %]
-                    <option></option>
+            [% IF dispcol.multivalue %]
+                [%# Ensure a value gets sent back to show this field was shown if nothing selected %]
+                <input type="hidden" name="[% field %]">
+            [% END %]
+            <select class="form-control [% IF dispcol.multivalue %]selectpicker [% END %]" name="[% field %]" id="[% dispcol.id %]" [% readonly %] [% IF dispcol.multivalue %]multiple[% END %]>
+                [% IF !dispcol.multivalue %]
+                    [% IF dispcol.optional OR editvalue.deleted OR (record.current_id AND NOT editvalue.id) OR NOT record.current_id %]
+                        <option></option>
+                    [% END %]
                 [% END %]
                 [% enumvals = dispcol.values %]
                 [% FOREACH enumval IN enumvals %]
                     [% UNLESS enumval.deleted %]
-                        <option value="[% enumval.id %]" [% IF editvalue.id == enumval.id %]selected[% END %]>[% enumval.value | html_entity %]</option>
+                        <option value="[% enumval.id %]" [% IF editvalue.id_hash.${enumval.id} %]selected[% END %]>[% enumval.value | html_entity %]</option>
                     [% END %]
                 [% END %]
             </select>
