--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -34,7 +34,7 @@
             <link rel="stylesheet" href="[% url.css %]/ctrlo-bootstrap.css">
         [% END %]
 
-        [% IF page == "layout" OR page == "edit" OR page == "approval" OR page =="audit" %]
+        [% IF page == "layout" OR page == "edit" OR page == "approval" OR page =="audit" OR page == "bulk" %]
             <link rel="stylesheet" href="[% url.css %]/jstree.min.css" />
             <link rel="stylesheet" href="[% url.css %]/bootstrap-datepicker.min.css" />
             <link rel="stylesheet" href="[% url.css %]/bootstrap-select.min.css" />
@@ -189,7 +189,7 @@
             <script src="[% scheme %]://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
             <script src="[% scheme %]://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/tooltip.min.js"></script>
         [% END %]
-        [% IF page == "edit" OR page == "approval" OR page == "audit" %]
+        [% IF page == "edit" OR page == "approval" OR page == "audit" OR page == "bulk" %]
             <script type="text/javascript" src="[% url.js %]/bootstrap-datepicker.js"></script>
             <script type="text/javascript">
                 $(document).ready(function() {
@@ -197,7 +197,7 @@
                 });
             </script>
         [% END %]
-        [% IF page == "edit" OR page == "approval" OR page == "view" OR page == "layout" OR (page == "data" AND viewtype == "timeline") %]
+        [% IF page == "edit" OR page == "bulk" OR page == "approval" OR page == "view" OR page == "layout" OR (page == "data" AND viewtype == "timeline") %]
             <script type="text/javascript" src="[% url.js %]/base64decode.js"></script>
         [% END %]
         [% IF page == "login" %]
@@ -226,7 +226,7 @@
         [% IF page == "view" OR page == "layout" %]
             <script type="text/javascript" src="[% url.js %]/query-builder.js"></script>
         [% END %]
-        [% IF page == "view" OR page == "edit" OR page == "layout" %]
+        [% IF page == "view" OR page == "edit" OR page == "layout" OR page == "bulk" %]
             <script type="text/javascript" src="[% url.js %]/bootstrap3-typeahead.min.js"></script>
         [% END %]
         [% IF page == "data" AND viewtype == "calendar" %]
@@ -270,7 +270,7 @@
             }
             $('input, text').placeholder();
         </script>
-        [% IF page == "layout" OR page == "edit" OR page == "approval" %]
+        [% IF page == "layout" OR page == "edit" OR page == "approval" OR page == "bulk" %]
             <script src="[% url.js %]/jstree.min.js"></script>
             <script src="[% url.js %]/jstree-misc.js"></script>
             <script src="[% url.js %]/bootstrap-select.min.js"></script>
